# ansin-medical

./: .gitignore  LICENSE  README.md  pyproject.toml  system-diagram.html
.claude/: settings.local.json
backend/: fake_db.py  main.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js
