[project]
name = "ansin-medical"
version = "0.1.0"
description = "安心醫伴新視界 - 後端 API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.0",
    "opencv-python>=4.9.0",
    "Pillow>=10.0.0",
    "av>=12.0.0",
    "anthropic>=0.30.0",
]

[tool.uv]
dev-dependencies = []
